syntax = "proto3";

package proto;

option go_package = "./proto";

service UserService {
  // Создание пользователя
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);

  // Получение пользователя по ID
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);

  // Обновление информации пользователя
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);

  // Удаление пользователя
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}


message User {
  uint64 id = 1;
  string username = 2;
  string email = 3;
  string description = 4;
  string avatar = 5;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string avatar = 3;
  string description = 4;
}

message CreateUserResponse {
  string message = 1;
  User user = 2;
}

message GetUserByIdRequest {
  uint64 user_id = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

message UpdateUserRequest {
  uint64 user_id = 1;
  string username = 2;
  string email = 3;
  string avatar = 4;
  string description = 5;
}

message UpdateUserResponse {
  string message = 1;
}

message DeleteUserRequest {
  uint64 user_id = 1;
}

message DeleteUserResponse {
  string message = 1;
}